--- a/src/main/resources/static/bs-plugins/treeview/css-backup/bootstrap-treeview.css
+++ b/src/main/resources/static/bs-plugins/treeview/css-backup/bootstrap-treeview.css
@@ -1,9 +1,9 @@
 /* =========================================================
- * patternfly-bootstrap-treeview.css v2.1.0
+ * bootstrap-treeview.css v1.2.0
  * =========================================================
- * Copyright 2013 Jonathan Miles
+ * Copyright 2013 Jonathan Miles 
  * Project URL : http://www.jondmiles.com/bootstrap-treeview
- *
+ *	
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -26,35 +26,12 @@
 	margin-right: 10px;
 }
 
-
 .treeview span.icon {
-  width: 12px;
-  margin-right: 5px;
+	width: 12px;
+	margin-right: 5px;
 }
 
 .treeview .node-disabled {
-  color: silver;
-  cursor: not-allowed;
-}
-
-.treeview .node-hidden {
-  display: none;
-}
-
-.treeview span.image {
-  display: inline-block;
-  width: 12px;
-  height: 1.19em;
-  vertical-align: middle;
-  background-size: contain;
-  background-repeat: no-repeat;
-  margin-right: 5px;
-  line-height: 1em;
-}
-
-.treeview span.icon.node-icon-background {
-  padding: 2px 2px 2px 2px;
-  width: calc(1em + 4px);
-  height: calc(1em + 4px);
-  line-height: 1em;
+	color: silver;
+	cursor: not-allowed;
 }
