--- a/src/main/resources/static/css/zyc-tree-expression-modal.css
+++ b/src/main/resources/static/css/zyc-tree-expression-modal.css
@@ -11,11 +11,20 @@
  	padding: 10px;
  	text-align: left;
  	background-color: #f5f5f5;
+ 	border-top-left-radius: 4px;
+ 	border-top-right-radius: 4px;
+ 	border-bottom-left-radius: 4px;
+ 	border-bottom-right-radius: 4px;
+ 	border: 1px solid #eee;
  }
  
  .zyc-tem .page-header h5 {
  	font-weight: bold;
  	margin: 0px;
+ }
+ 
+ .isolate-max {
+ 	margin: 50px 0px;
  }
  
  .isolate {
@@ -27,15 +36,30 @@
  }
  
  .middle button {
- 	width: 100px;
+ 	width: 120px;
  }
- /* 
- .right .list-group-item {
- 	border: none;
+
+ .tree-source-wrap, expression-wrap {
+ 	height: 350px;
+ 	overflow: auto;
  }
  
- .right .list-group-item:last-child {
- 	border-bottom-right-radius: 0px;
- 	border-bottom-left-radius: 0px;
- 	border: none;
- } */
+ .expression > a.list-group-item {
+ 	cursor: pointer;
+ }
+ 
+ code{
+ 	margin: 2px;
+ }
+ 
+ code.operate {
+ 	background-color: #EAF1EF;
+ }
+ 
+ code.relation {
+ 	background-color: #F2DA50;
+ }
+ 
+ code.value {
+ 	background-color: #D5E4F7;
+ }
