--- a/src/main/resources/static/zyc/css/zyc.css
+++ b/src/main/resources/static/zyc/css/zyc.css
@@ -1,3 +1,14 @@
+.bottom-btns {
+	text-align: center;
+}
+
+.bottom-btns > button {
+	margin-right: 20px;
+}
+
+.hand {
+	cursor: pointer; 
+}
 
 .tooltip-inner {
 	max-width: 500px;
