--- a/src/main/resources/tempplates/fragments/entity-common.html
+++ b/src/main/resources/tempplates/fragments/entity-common.html
@@ -43,7 +43,33 @@
 	</div>
 	<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
 </div>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 bottom-btns" th:fragment="btnRow(readonly)">
-	<button type="button" class="btn btn-default return">Return</button>
-	<button type="submit" class="btn btn-primary save" th:attr="readonly=${readonly},disabled=${readonly}">Save</button>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 bottom-btns" th:fragment="btnRow(readonly,returnUrl)">
+	<button type="button" class="btn btn-default return" th:attr="data-bind-returnUrl=${returnUrl}">Return</button>
+	<button type="submit" class="btn btn-primary save" th:attr="readonly=${readonly},disabled=${readonly},style='display: ' + (${readonly} ? 'none' : '')">Save</button>
+	<script type="text/javascript" th:src="@{/zyc/js/zyc-interval.js}" ></script>
+	<script th:inline="javascript" type="text/javascript">
+		(function() {
+			var handle = function() {
+				$('.bottom-btns .btn.return').off('click').on('click', function(e) {
+					var clickEvent = $(this).data('rebind-click-event');
+					if(typeof clickEvent === 'function') {
+						clickEvent.apply(this, [e]);
+					} else {
+						var path = $(this).data('returnUrl') || $(this).attr('data-bind-returnUrl');
+						if(path) {
+							zyc.redirect(path);
+						} else {
+							zyc.alert('I don\'t know what to do.');
+						}
+					}
+				});
+			}
+			
+			var unexecutable = function() {
+				return typeof $ === 'undefined' /* || typeof zyc === 'undefined' */;
+			}
+			
+			var interval = new ZycInterval(this, handle, unexecutable).start(300);
+		})();
+	</script>
 </div>
