--- a/src/main/resources/static/zyc/css/zyc-express-modal.css
+++ b/src/main/resources/static/zyc/css/zyc-express-modal.css
@@ -44,6 +44,10 @@
  	overflow: auto;
  }
  
+ .root-optional {
+ 	margin-bottom: 10px;
+ }
+ 
  .expression > a.list-group-item {
  	cursor: pointer;
  }
