--- a/src/main/resources/tempplates/fragments/entity-common.html
+++ b/src/main/resources/tempplates/fragments/entity-common.html
@@ -1,6 +1,6 @@
 <!-- Entity Common Template -->
 <div class="row form-group" th:fragment="descriptionRow(entity,readonly)">
-	<!-- *********** Form Domain 'description' *********** -->
+	<!-- *********** 'description' *********** -->
     <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="description">Description</label>
     <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
       	<input type="text" class="form-control" placeholder="Description" th:field="*{description}" th:attr="readonly=${readonly}" />
@@ -12,7 +12,7 @@
    	<h3 th:if="${title} != null" th:text="${title}"></h3>
 </div>
 <div class="row form-group" th:fragment="statusRow(entity,allDataStatus,readonly)">
-	<!-- *********** Form Domain 'datastatus' *********** -->
+	<!-- *********** 'datastatus' *********** -->
     <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="datastatus">Data Status</label>
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 		<select class="form-control" th:field="*{datastatus}" th:attr="readonly=${readonly},disabled=${readonly}">
@@ -20,7 +20,7 @@
 		</select>
 	</div>
 	<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
-	<!-- *********** Form Domain 'version' *********** -->
+	<!-- *********** 'version' *********** -->
     <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="version">Version</label>
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
       	<input type="text" class="form-control" placeholder="Version" th:field="*{version}" readonly="readonly" />
@@ -28,14 +28,14 @@
 	<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
 </div>
 <div class="row form-group" th:fragment="dateRow(entity,readonly)">
-	<!-- *********** Form Domain 'createdat' *********** -->
+	<!-- *********** 'createdat' *********** -->
     <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="createdat">Created At</label>
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 		<input type="hidden" th:field="*{createdat}" /> 
 		<input type="text" class="form-control" th:value="${#dates.format(entity.createdat,'yyyy-MM-dd HH:mm:ss')}" readonly="readonly" />
 	</div>
 	<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
-	<!-- *********** Form Domain 'updatedat' *********** -->
+	<!-- *********** 'updatedat' *********** -->
     <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="updatedat">Updated At</label>
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 		<input type="hidden" th:field="*{updatedat}" />
